.atom/styles.less
/*
 * Your Stylesheet
 *
 * This stylesheet is loaded when Atom starts up and is reloaded automatically
 * when it is changed and saved.
 *
 * Add your own CSS or Less to fully customize Atom.
 * If you are unfamiliar with Less, you can read more about it here:
 * http://lesscss.org
 */

atom-text-editor::shadow {
  .selection .region {
    background: rgba(0, 100, 100, 0.5) !important;
  }
  .wrap-guide {
    width: .5em;
  }
  .indent-guide:first-child {
    box-shadow: none;
  }
}

atom-text-editor,
atom-text-editor::shadow {
  .scroll-view {
    padding-left: 0.2em;
    box-sizing: border-box;
  }
  .gutter + .scroll-view {
    padding-left: 0;
  }
}

// vim-mode.
atom-text-editor.vim-mode {
  &.insert-mode.is-focused::shadow {
    .cursor-line {
      background: rgba(100,50,255, 0.9);
    }
  }
  &.visual-mode.is-focused::shadow {
    .cursor-line {
      background: rgba(0,100,100, 0.9);
    }
  }
}

// minimap.
.minimap .cursor-line {
  background: rgba(0,0,255, 1.0);
}

// git-log.
.git-log {
  font-size: 1.0em !important;
}

